--- a/stm32f0discovery/ssd1306gps_clock/README
+++ b/stm32f0discovery/ssd1306gps_clock/README
@@ -9,4 +9,6 @@ derived from uart03 and ssd1306b
 similar to the other gps clock, but uses this display instead of the
 other.
 
+removed lock and valid, where I have mine is not getting that for
+some reason.
 
