--- a/STM32F031F4P6/README
+++ b/STM32F031F4P6/README
@@ -21,34 +21,12 @@ second one trashed the first part.  I moved the braid sideways
 perpendicular to the direction of the pins and it bent all the pins
 on that side of the part.
 
-I use the clear tape method I can see both sides of the part, with
-the breakout I actually taped it to the work surface, then separately
-taped the chip to the board lining up all 20 pins, leaving one side
-exposed so I could solder.
-
-I liberally apply sider to that side, I dont really rub or apply any
-real force to the pins for fear of messing them up.  Also be careful
-of yanking on the solder as it may have cooled stuck to the pins.
-
-When cleaning off the solder with wick...A new rule I didnt think about
-before, dont use your fingers to pull more wick out, use something
-like pliers or tweezers, something that doesnt have oils or other
-chemicals on it, something clean, your fingers are not clean.  or
-another way to say it is put your fingers on the used part pull out
-some more, then cut off the used part that you touched.  Then you
-carefully heat up and remove the excess solder, ideally keeping the
-iron to the wick as you pull away and/or pull away along the direction
-of the pins not against the grain.
-
-Remove the tape and repeat on the other side.  THEN I soldered in
-a couple of rows of pins.
-
 I bought the microcontrollers from mouser I think, digikey is fine
 too if they have them, I like mouser slightly better maybe because
 you get to know the shipping before hand (although when first
 looking at the cart the $70 or whatever shipping is bogus, keep
 going to find/choose the real shipping price) not after you get the
-receipt days later.  And I think I can use paypal with mouser too.
+receipt days later.  And I can use paypal with mouser too, bonus.
 Anyway, bought the breakout boards on ebay, much cheaper, and they
 work just fine so far.
 
