adding examples for the NUCLEO-F411RE

--- a/NUCLEO-F401RE/README
+++ b/NUCLEO-F401RE/README
@@ -1,6 +1,6 @@
 
 This directory contains examples for the stm32f0 nucleo board
-specifically the stm32 f030r8 nucleo board.
+specifically the stm32 NUCLEO-F401RE.
 
 Starting page for all of the nucleo boards
 
