--- a/NUCLEO-F401RE/blinker07/README
+++ b/NUCLEO-F401RE/blinker07/README
@@ -9,4 +9,4 @@ The systick timer is part of the ARM core, we use the word interrupt
 and it is, but we didnt have to program the nvic nor did we have to
 enable interrupts to the core.  It just worked.  For interrupts that
 come in from outside the core (external (to the core) interrupts) those
-require additional work work.
+require additional work.
