--- a/NUCLEO-F031K6/README
+++ b/NUCLEO-F031K6/README
@@ -1,6 +1,6 @@
 
 This directory contains examples for the stm32f0 nucleo board
-specifically the stm32 f030r8 nucleo board.
+specifically the stm32 f031k6 nucleo board.
 
 Starting page for all of the nucleo boards
 
