--- a/stm32f7discovery/dwt/README
+++ b/stm32f7discovery/dwt/README
@@ -2,16 +2,38 @@
 See the previous level README for schematic and programmers reference
 information.
 
-blinker02 showed us that we are at 16MHz.  16000000/115200 = 138.8 or
-139
+Someone on stackoverflow was having a problem with the DWT cycle counter
+not working.  The Cortex-M7 TRM had an error, which kinda stands out
+when you step back a few feet.  The list of registers all start with
+0xE0001xxx except the LAR and LSR.  Lock access and lock status.  For
+the cortex-m7 at least the one I have and the one the OP has the
+DWT lock is present and locked.  So you need to unlock it in order to
+set the cycle count enable bit in order to see the cycle counts.
 
-With this board they have a virtual serial port using the same mini
-b usb as the one we power with so on linux it is /dev/ttyACM0.
+I imagine it is just bulk capacitance or sometihng, but found this
+interesting.  The reset button does not reset this stuff, if you
+run this program once, and then reset.  It is all enabled so from the
+beginning you can see the timer runing.  I commented out the
+unlock write to 0xE0001FB0, programmed that into flash.  Then pulled
+the power for a while, then powered back up.  Then uncommented the line
+and wrote it to flash, then you get the desired output that had us
+stumped for a while until someone pointed out the documentation error
 
-Unline other stm32 cards which normally use PA9 and PA10.  This one
-appears to be using PA9 for USART1_TX but PB7 for USART1_RX which this
-example does not use, but a future one will.
+00000000
+00000000
+00000000
+00000000
+00000003
+40000000
+00000000
+00000000
+00000003
+40000000
+00000000
+00000000
+00000001
+40000001
+0000774F
+0000B311
 
-This example sets up PA9 for alternate function 7 (USART1_TX) and
-sets up the uart and blasts 0123456701234567 forever.  At 115200 8N1.
-
+If you use 0xE0000FB0 as documented, it doesnt unlock the timer.
