--- a/STM32F103C8T6/blinker01/README
+++ b/STM32F103C8T6/blinker01/README
@@ -2,6 +2,6 @@
 See the previous level README for schematic and programmers reference
 information.
 
-PA4 and PA5 on this board have leds.  This is a very basic blinker,
+PC13 on this board has an leds.  This is a very basic blinker,
 blink time is not meant to be accurate or deterministic, but long
 enough to be seen.
