--- a/STM32F103C8T6/README
+++ b/STM32F103C8T6/README
@@ -93,7 +93,7 @@ work if the arm is halted as it may be if you used the above commands
 so press the reset button run progstm
 
 
-./progstm /dev/ttyUSB2  ../test.bin 
+./progstm /dev/ttyUSB2  ../test.bin
 116 bytes read
 port opened
 detect_chip()
@@ -117,7 +117,7 @@ getverpstat()
 0x00 read prot disables
 0x00 read prot enables
 getid()
-79 01 04 10 79 
+79 01 04 10 79
 write_unprotect()
 
 And now the flash write/erase will work.
@@ -154,7 +154,7 @@ bootloader on the chip, one that as far as we know, doesnt crash.
 I must have been having all kinds of bad luck weeks ago.  Had I been
 able to get the board to respond to progstm I might have gotten further.
 
-./progstm /dev/ttyUSB2 ../blinker01/blinker01.thumb.bin 
+./progstm /dev/ttyUSB2 ../blinker01/blinker01.thumb.bin
 200 bytes read
 port opened
 detect_chip()
@@ -178,7 +178,7 @@ getverpstat()
 0x00 read prot disables
 0x00 read prot enables
 getid()
-79 01 04 10 79 
+79 01 04 10 79
 erase_flash()
 erase_flash error 1
 0x1F
@@ -189,7 +189,7 @@ another board so dont know what the exact combination was, perhaps
 it really was read_unprotect().   then if I comment those out (why
 cant I just chain them?) reset/power cycle and then it works
 
-./progstm /dev/ttyUSB2 ../blinker01/blinker01.thumb.bin 
+./progstm /dev/ttyUSB2 ../blinker01/blinker01.thumb.bin
 200 bytes read
 port opened
 detect_chip()
@@ -213,7 +213,7 @@ getverpstat()
 0x00 read prot disables
 0x00 read prot enables
 getid()
-79 01 04 10 79 
+79 01 04 10 79
 erase_flash()
 erased
 write_mem_32(0x08000000,0x20001000)
@@ -293,3 +293,54 @@ if you use the .bin file then you need to specify 0x08000000
 Press reset and the led blinks.
 
 See the TOOLCHAIN file for info on where to find a compiler.
+
+
+STM32F103C8T6
+
+C 48 pins
+8 64 Kbytes
+T LQFP
+6 -40 to 85C
+
+
+There are j-link devices (or clones) from asia on ebay for around $11
+give or take.  Just got a couple in and they work both for traditional
+full JTAG on ARM and SWD on cortex-m3.
+
+https://www.segger.com/jlink-swd-isolator.html
+
+You only need VTref, SWDIO, SWCLK and one of the grounds you do NOT
+need SWO nor RESET.  The pinout is with respect to the connector on the
+j-link not the end of the ribbon.  I didnt need an interface card or
+anything else just connected to the four pins sticking off the end
+of the card.   The VTref is not a power supply it is sampling the
+voltage of the device to know how strong to drive the data lines (SWxxx)
+3.3 or 5 or 1.8 or whatever, I dont know the full range but certainly
+works with the 3.3 levels we need here.  This means you can use
+the usb end of the stm32 card to plug in and get power for the card.
+Is there risk?  Perhaps, in theory these jtag devices are meant to be
+used this way, I wouldnt necessarily (okay I have) use one computer
+for powering the stm32 via its usb and another computer for the j-link.
+A laptop or other on a brick might have a different ground reference
+(ideally not), worst case one computer is on one phase and the other
+on another, earth ground should still be common, but who knows. No
+your house normally does not have different phases in it.  If it blows
+up, not my fault.  Any time you get into this kind of work you have
+to assume that from time to time you are going to hook something up
+wrong and let some smoke out or you are going to have a bug in your
+program that bricks the board.  The boot0 pin ideally prevents that
+but, you might get lucky.  Configuring gpios wrong you can drive
+into another driver at opposite levels and if one side is weaker
+smoke comes out.  Not my fault, I smoke and brick my own stuff
+from time to time.
+
+Anyway, very happy with these, it is/was getting harder and harder
+to find a full ARM JTAG tool for a reasonable price (other than
+an FT2232 mini module or an FT4232 mini module and a bunch of jumper
+wires).
+
+
+
+
+
+
